--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,7 +22,9 @@ header{
     align-items: center;
 }
 
-.header-nav h3{
+.header-nav h3,
+.some-fact-title
+{
     font-size: 2.8rem;
     font-weight: 700;
     color: #131313;
@@ -74,7 +76,9 @@ header{
     font-size: 4rem;
 }
 
-.content-div p{
+.content-div p,
+.some-fact-des
+{
     color: #727272;
 }
 
@@ -104,7 +108,7 @@ main{
 .our-feature-container{
     display: flex;
     align-items: center;
-    padding: 70px 0px;
+    padding: 70px 15px;
 }
 
 .our-feature-img{
@@ -140,11 +144,35 @@ main{
 
 
 
+.sucess-box-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.sucess-box {
+    border: 1px solid #FF900E;
+    padding: 30px;
+    text-align: center;
+    border-radius: 8px;
+
+}
+
+.sucess-box h2{
+    font-size: 2.8rem;
+    color:#424242;
+    margin: 18px 0px;
+}
 
 
+.sucess-box span{
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #727272;
+}
 
-
-
+.some-fact-parent{
+    padding: 70px 15px;
+}
 
 
 
